relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_credit_card.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "foo": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
