relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_credit_card_within_value_1.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "foo": "'[Filtered]'"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              1,
              11
            ]
          ],
          "len": 18
        }
      }
    }
  }
}
