relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_http_body.snap
---
source: relay-pii/src/convert.rs
expression: data.value().unwrap().request
---
{
  "data": {
    "email": "zzzz@gmail.com",
    "password": "[Filtered]"
  },
  "_meta": {
    "data": {
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      }
    }
  }
}
