relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_url_1.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "foo": "pg://matt:[Filtered]@localhost/1"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              10,
              20
            ]
          ],
          "len": 26
        }
      }
    }
  }
}
