relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_url_2.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "foo": "foo 'redis://redis:[Filtered]@localhost:6379/0' bar"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              19,
              29
            ]
          ],
          "len": 44
        }
      }
    }
  }
}
