relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_url_3.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "foo": "'redis://redis:[Filtered]@localhost:6379/0'"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@urlauth:legacy",
              "s",
              15,
              25
            ]
          ],
          "len": 36
        }
      }
    }
  }
}
